external-crates/move/crates/move-package-alt/tests/snapshots/manifest_parsing_test__tests__data__manifest_parsing_valid__basic.snap
---
source: crates/move-package-alt/tests/manifest_parsing_test.rs
expression: manifest
---
Err(
    Error {
        inner: ErrorInner {
            message: "TOML parse error at line 23, column 1\n   |\n23 | [dep-overrides.mainnet.foo]\n   | ^\nDuplicate key `foo` in table `dep-overrides.mainnet`\n\nWhile parsing a Table Header\n",
            reverse_key: [],
            line_col: Some(
                (
                    22,
                    0,
                ),
            ),
        },
    },
)
