external-crates/move/crates/move-package-alt/tests/snapshots/manifest_parsing_test__tests__data__manifest_parsing_valid__basic_external_resolver.snap
---
source: crates/move-package-alt/tests/manifest_parsing_test.rs
expression: manifest
---
Err(
    Error {
        inner: ErrorInner {
            message: "no variant of enum ManifestDependencyInfo found in flattened data",
            reverse_key: [
                InternalString(
                    "mvr",
                ),
                InternalString(
                    "dependencies",
                ),
            ],
            line_col: None,
        },
    },
)
