external-crates/move/crates/move-package-alt/tests/snapshots/manifest_parsing_test__tests__data__manifest_parsing_valid__edition_2024_beta.snap
---
source: crates/move-package-alt/tests/manifest_parsing_test.rs
expression: manifest
---
Ok(
    Manifest {
        package: PackageMetadata {
            name: "name",
            edition: "2024.beta",
            metadata: (),
        },
        environments: {
            "mainnet": "35834a8a",
        },
        dependencies: {},
        dep_overrides: {},
    },
)
